fixed overflow in "about project" section

--- a/src/style.scss
+++ b/src/style.scss
@@ -534,6 +534,7 @@ ol.instruction li {
 	border-radius: 1em;
 	box-sizing: border-box;
 	position: relative;
+	overflow: hidden;
 }
 
 .modal_box-content a{
